--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio-tungstenite = "0.24.0"
 uuid = {version = "1.10.0", features = ["v4", "serde"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = {version = "1"}
+matchbox_signaling = "0.10.0"
