--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,9 @@
 		{
 			"type": "cargo",
 			"command": "run",
+			"env": {
+				"RUST_LOG":"debug"
+			},
 			"problemMatcher": [
 				"$rustc"
 			],
