--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ uuid = {version = "1.10.0", features = ["v4", "serde"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = {version = "1"}
 matchbox_signaling = "0.10.0"
+matchbox_protocol = "0.10.0"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
