updated log level

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 			"type": "cargo",
 			"command": "run",
 			"env": {
-				"RUST_LOG":"debug"
+				"RUST_LOG":"info"
 			},
 			"problemMatcher": [
 				"$rustc"
